--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -82,7 +82,7 @@
         padding: 0em 0em 0em .75em
         margin: 0px
         a
-            background: url("../_img/crumbs.png") no-repeat right center
+            background: url("../img/crumbs.png") no-repeat right center
             display: block
             padding: 0px 15px 0px 0px
             &:link,
