--- a/_sass/_flyingfocus.sass
+++ b/_sass/_flyingfocus.sass
@@ -3,16 +3,14 @@
 
 #flying-focus
     position: absolute
+    border-radius: 2px
     margin: 0px
     background: transparent
-    -webkit-transition-property: left, top, width, height, opacity
     transition-property: left, top, width, height, opacity
-    -webkit-transition-timing-function: cubic-bezier(0, 0.2, 0, 1)
     transition-timing-function: cubic-bezier(0, 0.2, 0, 1)
-    visibility: hidden
+    box-shadow: 0px 0px 2px 3px #78AEDA, 0px 0px 2px #78AEDA inset
     pointer-events: none
-    box-shadow: 0 0 2px 3px #78AEDA, 0 0 2px #78AEDA inset
-    border-radius: 2px
+    visibility: hidden
 
 #flying-focus.flying-focus_visible
     visibility: visible
@@ -20,13 +18,10 @@
 
 .flying-focus_target
     outline: none !important
-    // Doesn't work in Firefox :(
 
-// http://stackoverflow.com/questions/71074/how-to-remove-firefoxs-dotted-outline-on-buttons-as-well-as-links/199319
 .flying-focus_target::-moz-focus-inner
     border: 0px !important
 
-// Replace it with @supports rule when browsers catch up
 @media screen and (-webkit-min-device-pixel-ratio: 0)
     #flying-focus
         box-shadow: none
