--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -23,23 +23,17 @@
         &.selected
             a,
             a:hover
-                background-color: #F3F1EE
                 border-bottom-color: #FFF
                 padding-top: 11px
-                background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%) // FF3.6+
-                background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(100%, rgba(255, 255, 255, 0))) // Chrome,Safari4+
-                background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%) // Chrome10+,Safari5.1+
-                background: -o-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%) // Opera 11.10+
-                background: -ms-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%) // IE10+
-                background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%) // W3C
+                background-color: #F3F1EE
+                background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%)
                 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#00ffffff',GradientType=0 ) // IE6-9
         a
             display: inline-block
             background: #F0ECE8
             padding: 9px 11px 8px 10px
             margin: 0px 4px 0px 0px
-            -webkit-box-shadow: inset 0 0 1px 1px #F6F6F6
-            box-shadow: inset 0 0 1px 1px #F6F6F6
+            box-shadow: inset 0px 0px 1px 1px #F6F6F6
             color: #333
             text-decoration: none
             border:
@@ -56,14 +50,12 @@
                 shadow: 0px 1px 0px #FFF
             &:hover
                 background: #F5F5F5
-                -webkit-box-shadow: inset 0 0 1px 1px #EAEAEA
-                box-shadow: inset 0 0 1px 1px #EAEAEA
+                box-shadow: inset 0px 0px 1px 1px #EAEAEA
                 color: #222
                 cursor: pointer
             &:active
                 background: #D0D0D0
-                -webkit-box-shadow: inset 0 0 1px 1px #E3E3E3
-                box-shadow: inset 0 0 1px 1px #E3E3E3
+                box-shadow: inset 0px 0px 1px 1px #E3E3E3
                 color: #000
 
 .breadcrumbs
