--- a/_sass/_meyer.sass
+++ b/_sass/_meyer.sass
@@ -1,7 +1,7 @@
 
 //Resets the default styles in all browsers so they don't render things differently by default.
 
-// http://meyerweb.com/eric/tools/css/reset/ 
+// http://meyerweb.com/eric/tools/css/reset/
 // v2.0 | 20110126
 // License: none (public domain)
 
@@ -14,20 +14,18 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video
-  margin: 0
-  padding: 0
-  border: 0
+  +bmp0
   font-size: 100%
   font: inherit
   vertical-align: baseline
 
 // HTML5 display-role reset for older browsers
 
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section
   display: block
 
