--- a/_sass/_normalize.sass
+++ b/_sass/_normalize.sass
@@ -1,11 +1,29 @@
 
 //Resets the default styles in all browsers so they don't render things differently by default.
 
-/*!normalize.css v2.1.3|MIT License|git.io/normalize*/
+/*!normalize.css v3.0.3|MIT License|necolas.github.io/normalize.css*/
 
-// HTML5 DISPLAY DEFINITIONS
+// 1. Set default font family to sans-serif.
+// 2. Prevent iOS and IE text size adjust after device orientation change,
+//    without disabling user zoom.
 
-// Correct `block` display not defined in IE 8/9.
+html
+    font-family: sans-serif
+    -ms-text-size-adjust: 100%
+    -webkit-text-size-adjust: 100%
+
+// Remove default margin.
+
+body
+    margin: 0
+
+// HTML5 display definitions
+// ==========================================================================
+
+// Correct `block` display not defined for any HTML5 element in IE 8/9.
+// Correct `block` display not defined for `details` or `summary` in IE 10/11
+// and Firefox.
+// Correct `block` display not defined for `main` in IE 11.
 
 article,
 aside,
@@ -16,205 +34,179 @@ footer,
 header,
 hgroup,
 main,
+menu,
 nav,
 section,
 summary
-  display: block
+    display: block
 
-// Correct `inline-block` display not defined in IE 8/9.
+// 1. Correct `inline-block` display not defined in IE 8/9.
+// 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
 
 audio,
 canvas,
+progress,
 video
-  display: inline-block
+    display: inline-block
+    vertical-align: baseline
 
 // Prevent modern browsers from displaying `audio` without controls.
 // Remove excess height in iOS 5 devices.
 
 audio:not([controls])
-  display: none
-  height: 0
+    display: none
+    height: 0
 
-// Address `[hidden]` styling not present in IE 8/9.
-// Hide the `template` element in IE, Safari, and Firefox < 22.
+// Address `[hidden]` styling not present in IE 8/9/10.
+// Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
 
 [hidden],
 template
-  display: none
+    display: none
 
-// BASE
-
-// 1. Set default font family to sans-serif.
-// 2. Prevent iOS text size adjust after orientation change, without disabling
-//    user zoom.
-
-html
-  font-family: sans-serif
-  -ms-text-size-adjust: 100%
-  -webkit-text-size-adjust: 100%
-
-// Remove default margin.
-
-body
-  margin: 0
-
-// LINKS
+// Links
+// ==========================================================================
 
 // Remove the gray background color from active links in IE 10.
 
 a
-  background: transparent
+    background-color: transparent
+    &:active,
+    &:hover
+        outline: 0
 
-// Address `outline` inconsistency between Chrome and other browsers.
+// Improve readability of focused elements when they are also in an
+// active/hover state.
 
-a:focus
-  outline: thin dotted
+// Text-level semantics
+// ==========================================================================
 
-// Improve readability when focused and also mouse hovered in all browsers.
-
-a:active,
-a:hover
-  outline: 0
-
-// TYPOGRAPHY
-
-// Address variable `h1` font-size and margin within `section` and `article`
-// contexts in Firefox 4+, Safari 5, and Chrome.
-
-h1
-  font-size: 2em
-  margin: 0.67em 0
-
-// Address styling not present in IE 8/9, Safari 5, and Chrome.
+// Address styling not present in IE 8/9/10/11, Safari, and Chrome.
 
 abbr[title]
-  border-bottom: 1px dotted
+    border-bottom: 1px dotted
 
-// Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
+// Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
 
 b,
 strong
-  font-weight: bold
+    font-weight: bold
 
-// Address styling not present in Safari 5 and Chrome.
+// Address styling not present in Safari and Chrome.
 
 dfn
-  font-style: italic
+    font-style: italic
 
-// Address differences between Firefox and other browsers.
+// Address variable `h1` font-size and margin within `section` and `article`
+// contexts in Firefox 4+, Safari, and Chrome.
 
-hr
-  -moz-box-sizing: content-box
-  box-sizing: content-box
-  height: 0
+h1
+    font-size: 2em
+    margin: 0.67em 0
 
 // Address styling not present in IE 8/9.
 
 mark
-  background: #FF0
-  color: #000
+    background: #ff0
+    color: #000
 
-// Correct font family set oddly in Safari 5 and Chrome.
+// Address inconsistent and variable font size in all browsers.
+
+small
+    font-size: 80%
+
+// Prevent `sub` and `sup` affecting `line-height` in all browsers.
+
+sub
+    font-size: 75%
+    line-height: 0
+    position: relative
+    vertical-align: baseline
+
+sup
+    font-size: 75%
+    line-height: 0
+    position: relative
+    vertical-align: baseline
+    top: -0.5em
+
+sub
+    bottom: -0.25em
+
+// Embedded content
+// ==========================================================================
+
+// Remove border when inside `a` element in IE 8/9/10.
+
+img
+    border: 0
+
+// Correct overflow not hidden in IE 9/10/11.
+
+svg:not(:root)
+    overflow: hidden
+
+// Grouping content
+// ==========================================================================
+
+// Address margin not present in IE 8/9 and Safari.
+
+figure
+    margin: 1em 40px
+
+// Address differences between Firefox and other browsers.
+
+hr
+    box-sizing: content-box
+    height: 0
+
+// Contain overflow in all browsers.
+
+pre
+    overflow: auto
+
+// Address odd `em`-unit font size rendering in all browsers.
 
 code,
 kbd,
 pre,
 samp
-  font-family: monospace, serif
-  font-size: 1em
+    font-family: monospace, monospace
+    font-size: 1em
 
-// Improve readability of pre-formatted text in all browsers.
+// Forms
+// ==========================================================================
 
-pre
-  white-space: pre-wrap
+// Known limitation: by default, Chrome and Safari on OS X allow very limited
+// styling of `select`, unless a `border` property is set.
 
-// Set consistent quote types.
-
-q
-  quotes: "\201C" "\201D" "\2018" "\2019"
-
-// Address inconsistent and variable font size in all browsers.
-
-small
-  font-size: 80%
-
-// Prevent `sub` and `sup` affecting `line-height` in all browsers.
-
-sub,
-sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
-
-sup
-  top: -0.5em
-
-sub
-  bottom: -0.25em
-
-// EMBEDDED CONTENT
-
-// Remove border when inside `a` element in IE 8/9.
-
-img
-  border: 0
-
-// Correct overflow displayed oddly in IE 9.
-
-svg:not(:root)
-  overflow: hidden
-
-// FIGURES
-
-// Address margin not present in IE 8/9 and Safari 5.
-
-figure
-  margin: 0
-
-// FORMS
-
-// Define consistent border, margin, and padding.
-
-fieldset
-  border: 1px solid #C0C0C0
-  margin: 0 2px
-  padding: 0.35em 0.625em 0.75em
-
-// 1. Correct `color` not being inherited in IE 8/9.
-// 2. Remove padding so people aren't caught out if they zero out fieldsets.
-
-legend
-  border: 0
-  padding: 0
-
-// 1. Correct font family not being inherited in all browsers.
-// 2. Correct font size not being inherited in all browsers.
-// 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+// 1. Correct color not being inherited.
+//    Known issue: affects color of disabled elements.
+// 2. Correct font properties not being inherited.
+// 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
 
 button,
 input,
+optgroup,
 select,
 textarea
-  font-family: inherit
-  font-size: 100%
-  margin: 0
+    color: inherit
+    font: inherit
+    margin: 0
 
-// Address Firefox 4+ setting `line-height` on `input` using `!important` in
-// the UA stylesheet.
+// Address `overflow` set to `hidden` in IE 8/9/10/11.
 
-button,
-input
-  line-height: normal
+button
+    overflow: visible
+    text-transform: none
 
 // Address inconsistent `text-transform` inheritance for `button` and `select`.
 // All other form control elements do not inherit `text-transform` values.
-// Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
-// Correct `select` style inheritance in Firefox 4+ and Opera.
+// Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+// Correct `select` style inheritance in Firefox.
 
-button,
 select
-  text-transform: none
+    text-transform: none
 
 // 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
 //    and `video` controls.
@@ -223,61 +215,106 @@ select
 //    `input` and others.
 
 button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"]
-  -webkit-appearance: button
-  cursor: pointer
+html input[type="button"]
+    -webkit-appearance: button
+    // 2
+    cursor: pointer
+    // 3
+
+input
+    &[type="reset"],
+    &[type="submit"]
+        -webkit-appearance: button
+        cursor: pointer
 
 // Re-set default cursor for disabled elements.
 
 button[disabled],
 html input[disabled]
-  cursor: default
-
-// 1. Address box sizing set to `content-box` in IE 8/9/10.
-// 2. Remove excess padding in IE 8/9/10.
-
-input[type="checkbox"],
-input[type="radio"]
-  box-sizing: border-box
-  padding: 0
-
-// 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
-// 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
-//    (include `-moz` to future-proof).
-
-input[type="search"]
-  -webkit-appearance: textfield
-  -moz-box-sizing: content-box
-  -webkit-box-sizing: content-box
-  box-sizing: content-box
-
-// Remove inner padding and search cancel button in Safari 5 and Chrome
-// on OS X.
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration
-  -webkit-appearance: none
+    cursor: default
 
 // Remove inner padding and border in Firefox 4+.
 
-button::-moz-focus-inner,
-input::-moz-focus-inner
-  border: 0
-  padding: 0
+button::-moz-focus-inner
+    border: 0
+    padding: 0
 
-// 1. Remove default vertical scrollbar in IE 8/9.
-// 2. Improve readability and alignment in all browsers.
+input
+    &::-moz-focus-inner
+        border: 0
+        padding: 0
+    line-height: normal
+    &[type="checkbox"],
+    &[type="radio"]
+        box-sizing: border-box
+        padding: 0
+    &[type="number"]
+        &::-webkit-inner-spin-button,
+        &::-webkit-outer-spin-button
+            height: auto
+    &[type="search"]
+        -webkit-appearance: textfield
+        box-sizing: content-box
+        &::-webkit-search-cancel-button,
+        &::-webkit-search-decoration
+            -webkit-appearance: none
+
+// Address Firefox 4+ setting `line-height` on `input` using `!important` in
+// the UA stylesheet.
+
+// It's recommended that you don't attempt to style these elements.
+// Firefox's implementation doesn't respect box-sizing, padding, or width.
+//
+// 1. Address box sizing set to `content-box` in IE 8/9/10.
+// 2. Remove excess padding in IE 8/9/10.
+
+// Fix the cursor style for Chrome's increment/decrement buttons. For certain
+// `font-size` values of the `input`, it causes the cursor style of the
+// decrement button to change from `default` to `text`.
+
+// 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+// 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
+
+// Remove inner padding and search cancel button in Safari and Chrome on OS X.
+// Safari (but not Chrome) clips the cancel button when the search input has
+// padding (and `textfield` appearance).
+
+// Define consistent border, margin, and padding.
+
+fieldset
+    border: 1px solid #c0c0c0
+    margin: 0 2px
+    padding: 0.35em 0.625em 0.75em
+
+// 1. Correct `color` not being inherited in IE 8/9/10/11.
+// 2. Remove padding so people aren't caught out if they zero out fieldsets.
+
+legend
+    border: 0
+    // 1
+    padding: 0
+    // 2
+
+// Remove default vertical scrollbar in IE 8/9/10/11.
 
 textarea
-  overflow: auto
-  vertical-align: top
+    overflow: auto
 
-// TABLES
+// Don't inherit the `font-weight` (applied by a rule above).
+// NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
+
+optgroup
+    font-weight: bold
+
+// Tables
+// ==========================================================================
 
 // Remove most spacing between table cells.
 
 table
-  border-collapse: collapse
-  border-spacing: 0
+    border-collapse: collapse
+    border-spacing: 0
+
+td,
+th
+    padding: 0
